Fixed padding on small devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,8 @@ nav {
     .nav-links {
         position: absolute;
         right: 0px;
-        height: 90vh;
-        top: 8vh;
+        height: 92vh;
+        top: 7.5vh;
         background-color: var(--primary);
         display: flex;
         flex-direction: column;
@@ -145,10 +145,6 @@ nav {
     .burger {
         display: block;
     }
-}
-
-.nav-active {
-    transform: translateX(0);
 }
 
 @keyframes navLinkFade{
@@ -172,6 +168,10 @@ nav {
 
 .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.nav-active {
+    transform: translateX(0);
 }
 /* End Nav */
 
@@ -313,6 +313,12 @@ nav {
     
     .social a:not(:last-child) {
         margin-right: .5rem;
+    }
+}
+
+@media(max-width: 500px){
+    .header {
+        padding: 60px 0;
     }
 }
 /* End Header */
